# fast_pose_estimation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tinypose.prototxt
doc/: caffe_depthconv.md
include/: human_pose.hpp  pose_estimation.hpp
models/: depthwise_tinypose.prototxt  tinypose.prototxt
src/: peak.cpp  pose_estimation.cpp  render_human_pose.cpp
